events: Removed Evolution runtime dependency

We have a runtime dependecy in Almanah because we check for the
org.gnome.evolution.calendar settings to read the timezone, so just use
the EDS e_cal_util_get_system_timezone_location and watch for changes
in /etc/timezone

https://bugzilla.gnome.org/show_bug.cgi?id=745497